--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-reloder-api-json",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Scherlock90.github.io/react-reloder-api-json/",
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.8.6",
@@ -12,7 +13,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -22,5 +25,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
