--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://Scherlock90.github.io/react-reloder-api-json/",
   "dependencies": {
     "axios": "^0.18.0",
+    "jquery": "^3.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
