--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://Scherlock90.github.io/react-reloder-api-json/",
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
     "axios": "^0.18.0",
     "jquery": "^3.4.0",
     "react": "^16.8.6",
