--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-csv-to-table": "^0.0.1",
     "react-dom": "^16.8.6",
     "react-file-viewer": "^1.1.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-vis": "^1.11.7",
+    "recharts": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
