--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "homepage": "https://Scherlock90.github.io/react-reloder-api-json/",
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "apexcharts": "^3.6.11",
     "axios": "^0.18.0",
+    "britecharts-react": "^0.5.1",
+    "chartist": "^0.11.0",
     "data.js": "^0.12.3",
     "jquery": "^3.4.0",
     "react": "^16.8.6",
+    "react-apexcharts": "^1.3.3",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-csv-to-table": "^0.0.1",
     "react-dom": "^16.8.6",
     "react-file-viewer": "^1.1.0",
