--- a/package.json
+++ b/package.json
@@ -5,21 +5,11 @@
   "homepage": "https://Scherlock90.github.io/react-reloder-api-json/",
   "dependencies": {
     "@material-ui/core": "^3.9.3",
-    "apexcharts": "^3.6.11",
     "axios": "^0.18.0",
-    "britecharts-react": "^0.5.1",
-    "chartist": "^0.11.0",
-    "data.js": "^0.12.3",
-    "jquery": "^3.4.0",
+    "node-sass": "^4.13.1",
     "react": "^16.8.6",
-    "react-apexcharts": "^1.3.3",
-    "react-bootstrap": "^1.0.0-beta.8",
-    "react-csv-to-table": "^0.0.1",
     "react-dom": "^16.8.6",
-    "react-file-viewer": "^1.1.0",
-    "react-scripts": "2.1.8",
-    "react-vis": "^1.11.7",
-    "recharts": "^1.5.0"
+    "react-scripts": "2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
